Fix alignment of image-less posts when on the same row as image-posts

--- a/css/4-blocks/latest-posts.css
+++ b/css/4-blocks/latest-posts.css
@@ -5,7 +5,7 @@
 		display: flex;
 		position: relative;
 		overflow: hidden;
-		align-items: center;
+		align-items: stretch;
 		background: var(--color-light-grey);
 	}
 
@@ -20,7 +20,6 @@
 		flex-wrap: wrap;
 		justify-content: center;
 		align-items: center;
-		min-height: 300px;
 		width: 100%;
 		padding: 2rem;
 		text-align: center;
@@ -48,6 +47,10 @@
 			position: absolute 0;
 			z-index: 1;
 		}
+	}
+
+	& .wp-block-latest-posts__featured-image {
+		align-self: center;
 	}
 
 	& .wp-block-latest-posts__featured-image + .wp-block-latest-posts__content {
